fix(ci): correct build context to project root (.)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,17 +27,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build image
+      - name: Build Docker image
         run: |
           IMAGE_PATH=$(echo "$REGISTRY/$IMAGE_NAME/$SERVICE_NAME" | tr '[:upper:]' '[:lower:]')
           docker build -t $IMAGE_PATH:latest .
 
-      - name: Run tests
+      - name: Run tests inside container
         run: |
           IMAGE_PATH=$(echo "$REGISTRY/$IMAGE_NAME/$SERVICE_NAME" | tr '[:upper:]' '[:lower:]')
           docker run --rm -e RUN_TESTS=1 $IMAGE_PATH:latest || exit 1
 
-      - name: Push image
+      - name: Push Docker image
         run: |
           IMAGE_PATH=$(echo "$REGISTRY/$IMAGE_NAME/$SERVICE_NAME" | tr '[:upper:]' '[:lower:]')
           docker push $IMAGE_PATH:latest
