--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,19 @@
-name: Build and Push
+name: Deploy to GHCR
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: fountain-coach/swarm-orchestrator
   SERVICE_NAME: swarm-orchestrator
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
@@ -20,27 +22,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
+      - name: Build Docker Image
         run: |
-          IMAGE_PATH=$(echo "$REGISTRY/$IMAGE_NAME/$SERVICE_NAME" | tr '[:upper:]' '[:lower:]')
-          docker build -t $IMAGE_PATH:latest .
+          docker build -t $REGISTRY/$IMAGE_NAME/$SERVICE_NAME:latest FountainAI/swarm_orchestrator
 
-      - name: Run tests inside container
+      - name: Push Docker Image
         run: |
-          IMAGE_PATH=$(echo "$REGISTRY/$IMAGE_NAME/$SERVICE_NAME" | tr '[:upper:]' '[:lower:]')
-          docker run --rm -e RUN_TESTS=1 $IMAGE_PATH:latest || exit 1
-
-      - name: Push Docker image
-        run: |
-          IMAGE_PATH=$(echo "$REGISTRY/$IMAGE_NAME/$SERVICE_NAME" | tr '[:upper:]' '[:lower:]')
-          docker push $IMAGE_PATH:latest
-
-      - name: ✅ All steps passed
-        run: echo "Swarm Orchestrator build, test, and push completed successfully."
+          docker push $REGISTRY/$IMAGE_NAME/$SERVICE_NAME:latest
