--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t $REGISTRY/$IMAGE_NAME/$SERVICE_NAME:latest FountainAI/swarm_orchestrator
+          docker build -t $REGISTRY/$IMAGE_NAME:latest .
 
       - name: Push Docker Image
         run: |
-          docker push $REGISTRY/$IMAGE_NAME/$SERVICE_NAME:latest
+          docker push $REGISTRY/$IMAGE_NAME:latest
