--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,11 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: fountain-coach/swarm-orchestrator
-  SERVICE_NAME: swarm-orchestrator
+  TAG: latest
 
 jobs:
-  build:
+  deploy:
+    name: Build & Push Docker image to GHCR
     runs-on: ubuntu-latest
 
     permissions:
@@ -22,17 +23,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to GHCR
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker Image
-        run: |
-          docker build -t $REGISTRY/$IMAGE_NAME:latest .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Push Docker Image
-        run: |
-          docker push $REGISTRY/$IMAGE_NAME:latest
+      - name: Build and Push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}
